--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
         
         <button onclick="generateQRCode()">Générer QR Code</button>
         <button onclick="downloadQRCode()">Télécharger QR Code</button>
+        <button class="ref" onclick="refreshPage()">Rafraîchir la Page</button>
 
         <div id="canvas"></div>
     </div>
