--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Générateur de QR Code</title>
     <script src="https://unpkg.com/qr-code-styling@1.5.0/lib/qr-code-styling.js"></script>
+    <script type="module">
+        import { injectSpeedInsights } from '@vercel/speed-insights';
+        injectSpeedInsights();
+    </script>
     <style>
         body {
             font-family: Arial, sans-serif;
